--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+g<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="app-icon">📚</div>
-    <h1>English by Articles</h1>
+    <h1>EngRead</h1>
     <p style="text-align: center; font-size: 18px; color: #666;">App Support & Help Center</p>
     
     <h2>About the App</h2>
