--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - EngRead</title>
+    <title>Privacy Policy - Readicle</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -63,14 +63,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>EngRead Privacy Policy</h1>
+        <h1>Readicle Privacy Policy</h1>
         
         <div class="effective-date">
             <strong>Effective Date:</strong> August 11, 2025
         </div>
 
         <h2>1. Introduction</h2>
-        <p>This Privacy Policy describes how EngRead ("we," "our," or "us") collects, uses, and protects your information when you use our mobile application ("App"). We are committed to protecting your privacy and handling your data responsibly.</p>
+        <p>This Privacy Policy describes how Readicle ("we," "our," or "us") collects, uses, and protects your information when you use our mobile application ("App"). We are committed to protecting your privacy and handling your data responsibly.</p>
 
         <h2>2. Information We Collect</h2>
         <div class="data-section">
@@ -142,7 +142,7 @@
         <div class="contact">
             <h2>13. Contact Us</h2>
             <p>If you have any questions about this Privacy Policy or our privacy practices, please contact us at:</p>
-            <p><strong>Email:</strong> privacy@engread.com</p>
+            <p><strong>Email:</strong> privacy@Readicle.com</p>
             <p><strong>Subject:</strong> Privacy Policy Inquiry</p>
             <p>We will respond to your inquiry within 30 days.</p>
         </div>
