--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - EngRead</title>
+    <title>Terms of Service - Readicle</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -53,17 +53,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>EngRead Terms of Service</h1>
+        <h1>Readicle Terms of Service</h1>
         
         <div class="effective-date">
             <strong>Effective Date:</strong> August 11, 2025
         </div>
 
         <h2>1. Acceptance of Terms</h2>
-        <p>By downloading, installing, or using the EngRead mobile application ("App"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, please do not use the App.</p>
+        <p>By downloading, installing, or using the Readicle mobile application ("App"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, please do not use the App.</p>
 
         <h2>2. Description of Service</h2>
-        <p>EngRead is an English learning application that provides educational articles and content for language learners at various proficiency levels. The App offers both free and premium subscription-based content.</p>
+        <p>Readicle is an English learning application that provides educational articles and content for language learners at various proficiency levels. The App offers both free and premium subscription-based content.</p>
 
         <h2>3. Subscription Services</h2>
         <div class="subscription-info">
@@ -98,7 +98,7 @@
         <p>You agree to use the App responsibly and in accordance with all applicable laws and regulations.</p>
 
         <h2>9. Limitation of Liability</h2>
-        <p>EngRead is provided "as is" without warranties of any kind, either express or implied. We shall not be liable for any damages arising from the use of the App.</p>
+        <p>Readicle is provided "as is" without warranties of any kind, either express or implied. We shall not be liable for any damages arising from the use of the App.</p>
 
         <h2>10. Changes to Terms</h2>
         <p>We reserve the right to modify these Terms at any time. Your continued use of the App constitutes acceptance of any changes.</p>
@@ -109,7 +109,7 @@
         <div class="contact">
             <h2>12. Contact Information</h2>
             <p>For questions about these Terms of Service, please contact us at:</p>
-            <p><strong>Email:</strong> support@engread.com</p>
+            <p><strong>Email:</strong> support@Readicle.com</p>
             <p><strong>Subject:</strong> Terms of Service Inquiry</p>
         </div>
     </div>
