--- a/privacy.html
+++ b/privacy.html
@@ -142,7 +142,7 @@
         <div class="contact">
             <h2>13. Contact Us</h2>
             <p>If you have any questions about this Privacy Policy or our privacy practices, please contact us at:</p>
-            <p><strong>Email:</strong> privacy@Readicle.com</p>
+            <p><strong>Email:</strong> privacy@readicle.com</p>
             <p><strong>Subject:</strong> Privacy Policy Inquiry</p>
             <p>We will respond to your inquiry within 30 days.</p>
         </div>
