--- a/terms.html
+++ b/terms.html
@@ -109,7 +109,7 @@
         <div class="contact">
             <h2>12. Contact Information</h2>
             <p>For questions about these Terms of Service, please contact us at:</p>
-            <p><strong>Email:</strong> support@Readicle.com</p>
+            <p><strong>Email:</strong> support@readicle.com</p>
             <p><strong>Subject:</strong> Terms of Service Inquiry</p>
         </div>
     </div>
